# VisualInspectionDemo

./: .gitignore  README.md
data/: image.txt
deepeye_gpu/demo/: CMakeLists.txt  classifier_sample.cpp  cm_image.cpp  cm_image.h
deepeye_gpu/demo/lib/include/: deepeye_image_classifier_gpu.h  deepeye_util.h
zia_c3/googlenet/: InspectionDemoGoogLeNet_gen.cpp  InspectionDemoGoogLeNet_gen.h  Makefile  main.cpp
zia_c3/mobilenet/: InspectionDemoMobilenet_gen.cpp  InspectionDemoMobilenet_gen.h  Makefile  main.cpp
zia_c3/resnet50/: InspectionDemoResnet_gen.cpp  InspectionDemoResnet_gen.h  Makefile  main.cpp
